--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^10.16.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "react-scroll": "^1.9.0",
     "yup": "^1.3.2"
